--- a/GalleriaImmaginiRIA/src/main/webapp/WEB-INF/login_page.html
+++ b/GalleriaImmaginiRIA/src/main/webapp/WEB-INF/login_page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html>
 
 <head>
 <meta charset="ISO-8859-1">
 <title>PF15 - Log in/sign up</title>
-<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/login_page.css}" />
+<link rel="stylesheet" type="text/css" media="all" href="@{/css/login_page.css}" />
+<script src="/js/login_page.js" charset="utf-8" defer></script>
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 	</h1>
 
 	<h2>Login</h2>
-	<form th:action="@{/LoginCheck}" method="POST">
+	<form action="#" method="POST"> <!-- # means JS will catch this form (and then forward it to the right servlet) -->
 		<table>
 			<tr>
 				<td>Username:</td>
@@ -27,17 +28,11 @@
 				<td></td>
 				<td><input type="submit" value="login"></td>
 			</tr>
-			<tr>
-				<td></td>
-				<td>
-					<p class="errorLabel" th:text=" ${errorMsgLogin}"></p>
-				</td>
-			</tr>
 		</table>
 	</form>
 
 	<h2>Signup</h2>
-	<form th:action="@{/SignupCheck}" method="POST">
+	<form action="#" method="POST">
 		<table>
 			<tr>
 				<td>Username:</td>
@@ -59,12 +54,6 @@
 			<tr>
 				<td></td>
 				<td><input type="submit" value="signup"></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td>
-					<p class="errorLabel" th:text=" ${errorMsgSignup}"></p>
-				</td>
 			</tr>
 		</table>
 	</form>
